Uppercase board manifest for the target devices

--- a/examples/stc-blink/platformio.ini
+++ b/examples/stc-blink/platformio.ini
@@ -10,16 +10,16 @@
 
 [env:stc15f204ea]
 platform = intel_mcs51
-board = stc15f204ea
+board = STC15F204EA
 
 [env:stc15w204s]
 platform = intel_mcs51
-board = stc15w204s
+board = STC15W204S
 
 [env:stc15w404as]
 platform = intel_mcs51
-board = stc15w404as
+board = STC15W404AS
 
 [env:stc15w408as]
 platform = intel_mcs51
-board = stc15w408as
+board = STC15W408AS
