--- a/examples/native-blink/platformio.ini
+++ b/examples/native-blink/platformio.ini
@@ -9,12 +9,12 @@
 
 [env:stc15f204ea]
 platform = intel_mcs51
-board = stc15f204ea
+board = STC15F204EA
 
 [env:stc15w404as]
 platform = intel_mcs51
-board = stc15w404as
+board = STC15W404AS
 
 [env:stc15w408as]
 platform = intel_mcs51
-board = stc15w408as
+board = STC15W408AS
